tests/baselines/reference/emptyArrayBindingPatternParameter03(strict=true).errors.txt
emptyArrayBindingPatternParameter03.ts(1,12): error TS7006: Parameter 'a' implicitly has an 'any' type.


==== emptyArrayBindingPatternParameter03.ts (1 errors) ====
    function f(a, []) {
               ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
        var x, y, z;
    }